--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.3
+===
+  - Fixed logic to check for IO::Socket::SSL (didn't work very well with
+    Perl2Exe).
+  - Added tests for make test.
+  
 0.2
 ===
   - Fixed bug in read code where it would not finish reading a request.
