import Net-HTTPServer 0.5 from CPAN
git-cpan-module:   Net-HTTPServer
git-cpan-version:  0.5
git-cpan-authorid: REATMON
git-cpan-file:     authors/id/R/RE/REATMON/Net-HTTPServer-0.5.tar.gz

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+o.5
+===
+  - Fixed bug with SSL support.  I had hard coded paths and a bad check
+    for the SSL options.
+
 0.4
 ===
   - Allow for the reponse to be a FileHandle that _send will read and send
