--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.6.5
+=====
+  - Removed a rogue debug statement.
+
 0.6
 ===
   - Added code to detect a failed Start() and throw errors if Process()
