import Net-HTTPServer 0.8.1 from CPAN
git-cpan-module:   Net-HTTPServer
git-cpan-version:  0.8.1
git-cpan-authorid: REATMON
git-cpan-file:     authors/id/R/RE/REATMON/Net-HTTPServer-0.8.1.tar.gz

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.8.1
+=====
+  - Big bug.  If you write too fast ten sometimes syswrite returns undef
+    even though it was not *really* an error.  Use select to wait on this.
+    Hopefully this won't create more problems.
 
 0.8
 ===
