--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.9.2
+=====
+
+  - Fixed bug with interaction with Internet Explorer.  I was parsing the
+    headers incorrectly.
+
 0.9.1
 =====
 
