import Net-HTTPServer 1.0 from CPAN
git-cpan-module:   Net-HTTPServer
git-cpan-version:  1.0
git-cpan-authorid: REATMON
git-cpan-file:     authors/id/R/RE/REATMON/Net-HTTPServer-1.0.tar.gz

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+1.0
+===
+
+  - Added PHP style session support.
+  
+  - Moved to more object oriented model: object for request, object for reply.
+
+  - Added cookie support.
+
 0.9.4
 =====
 
