import Net-HTTPServer 1.0.1 from CPAN
git-cpan-module:   Net-HTTPServer
git-cpan-version:  1.0.1
git-cpan-authorid: REATMON
git-cpan-file:     authors/id/R/RE/REATMON/Net-HTTPServer-1.0.1.tar.gz

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+1.0.1
+=====
+
+  - Fixed Response to normalize the output so that the tests can come out the
+    same for each run.  Basically, cookies were printing out in a different
+    order then what was hard coded in the test.
+
 1.0
 ===
 
