import Net-HTTPServer 1.0.2 from CPAN
git-cpan-module:   Net-HTTPServer
git-cpan-version:  1.0.2
git-cpan-authorid: REATMON
git-cpan-file:     authors/id/R/RE/REATMON/Net-HTTPServer-1.0.2.tar.gz

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+1.0.2
+=====
+
+  - If you register a callback /some/path/index.foo, AND you set the index
+    list to include index.foo then /some/path/ will resolve to the callback.
+    Thanks to John Jones for this request.
+
 1.0.1
 =====
 
